# pnpm-shell-completion

./: .editorconfig  Cargo.toml  LICENSE  README.md  install.fish  install.sh  pnpm-shell-completion.fish  pnpm-shell-completion.plugin.zsh  pnpm-shell-completion.ps1  pnpm.fish  zplug.zsh
.github/workflows/: publish.yml
conf.d/: pnpm-shell-completion.fish
src/: deps.rs  filter.rs  main.rs  monorepo.rs  pnpm_cmd.rs  scripts.rs  types.rs
