[package]
name = "pnpm-shell-completion"
version = "0.5.3"
edition = "2021"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "Complete your pnpm command fastly."
repository = "https://github.com/g-plane/pnpm-shell-completion"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
anyhow = "1.0"
futures = "0.3"
globset = "0.4"
ignore = "0.4"
itertools = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.36", features = ["fs", "macros", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
strip = true
